Sat Sep 13 14:21:13 CDT 2003 Adam Heath <doogie@debian.org>

  * config.sub, config.guess: Updated

Sat Sep 13 14:20:12 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/control: Add build-depends on sgml-base, and increase
    gettext build-depends to 0.12.1-3.

Sat Sep 13 14:18:02 CDT 2003 Adam Heath <doogie@debian.org>

  * configure.in:
    * Change AC_SYS_SIGLIST_DECLARED to AC_DECL_SYS_SIGLIST.
    * Add locale.h to list of checked headers.
    * Pass external to AM_GNU_GETTEXT

Sat Sep 13 13:57:22 CDT 2003 Adam Heath <doogie@debian.org>

  * Makefile.conf.in: s/top_srcdir/abs_top_srcdir/

Sat Sep 13 13:56:23 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/compat.c: s/SYS_SIGLIST_DECLARED/HAVE_DECL_SYS_SIGLIST/

Sat Sep 13 13:55:25 CDT 2003 Adam Heath <doogie@debian.org>

  * po/Makevars: Define MSGID_BUGS_ADDRESS

Fri, 12 Sep 2003 17:15:33 +0200 Wichert Akkerman <wichert@deephackmode.org>

  * srcipts/dpkg-source.pl: allow ~ in version numbers

Sat Apr 26 15:10:24 CDT 2003 Adam Heath <doogie@debian.org>

  * version-nr, debian/changelog: Updated for 1.10.10 release.

Sat Apr 26 15:09:10 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/control: Updated to standards-version 3.5.8.
  * debian/{dpkg,{-dev,-doc},dselect}.{prerm,postinst}, debian/rules: No
    longer manage /usr/doc symlinks.

Sat Apr 26 14:28:17 CDT 2003 Adam Heath <doogie@debian.org>

  * .cvsignore, po/.cvsignore: Added generated/symlinked files.

Sat Apr 26 14:24:05 CDT 2003 Adam Heath <doogie@debian.org>

  * mkinstalldirs: removed, as this is generated.

Sat Apr 26 14:22:16 CDT 2003 Adam Heath <doogie@debian.org>

  * po/Makevars: Needed to work with the newer gettext.

Sat Apr 26 11:29:30 CDT 2003 Adam Heath <doogie@debian.org>

  * configure.in, Makefile.in: Updated for gettext 0.11.5.
  * po/*: Updated.

Tue Apr 15 11:32:22 CDT 2003 Adam Heath <doogie@debian.org>

  * archtable, utils/start-stop-daemon.c,  scripts/dpkg-architecture.pl:
    Add netbsd support.