@@ -4,6 +4,9 @@ dpkg (1.10.11) unstable; urgency=low
   * Add build-depends on sgml-base, and increase gettext build-depends to
     0.12.1-3.
   * Updated config.sub and config.guess in cvs.
+  * Frank Lichtenheld <frank@lichtenheld.de>:
+    Apply patch, to handle missing infodir.bak, and empty files.  Closes:
+    #196361
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
