@@ -1,3 +1,8 @@
+Sat Sep 13 14:24:14 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/install-info.pl: Apply patch, to handle missing infodir.bak,
+    and empty files.
+
 Sat Sep 13 14:21:13 CDT 2003 Adam Heath <doogie@debian.org>
 
   * config.sub, config.guess: Updated
